--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="shortcut icon" href="images/netflixfavicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <title>Netflix-Obaid</title>
+    <title>Netflix_jamal</title>
 </head>
 
 <body>
 
-    <!-- =====================Home================== -->
+   <!-- =====================Home================== -->
 
     <section class="home">
         <nav class="navbar">
